--- a/styles.css
+++ b/styles.css
@@ -1,111 +1,38 @@
-/* styles.css */
-
 body {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; /* Changed font */
-  background-color: #f4f4f4;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center; /* Center content horizontally */
-  justify-content: center;
-  min-height: 100vh; /* Ensure minimum height */
-}
-#header {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  width: 100%; /* Set the width to 100% or any other value you prefer */
-  background-color: #333; /* Optional: Set a background color */
-  color: #fff; /* Optional: Set text color */
-  padding: 20px; /* Optional: Add padding for better visual appearance */
-  text-align: center; /* Optional: Center the text within the header */
-}
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+  }
 
-#tableContainer{
-  overflow-x: auto;
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  max-width: 1200px;
-  margin: 20px auto;
-}
+  header {
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+    text-align: center;
+  }
 
-table {
-  width: 100%;
-  border-collapse: collapse;
-  border-radius: 8px;
-  overflow: hidden;
-  border: 2px solid #3498db; /* Updated border style */
-}
+  nav {
+    display: none;
+    justify-content: center;
+    background-color: #555;
+    padding: 10px;
+  }
 
-th,
-td {
-  border: 1px solid #ddd;
-  padding: 12px;
-  text-align: left;
-}
+  nav a {
+    color: #fff;
+    text-decoration: none;
+    margin: 0 15px;
+  }
 
-th {
-  background-color: #555;
-  color: #fff;
-  position: sticky;
-  top: 0;
-}
+  section {
+    padding: 20px;
+    text-align: center;
+  }
 
-tr:nth-child(even) {
-  background-color: #f2f2f2;
-}
-th:nth-child(6),
-td:nth-child(6) {
-  width: 600px; /* Change this value to your desired width */
-}
-th:nth-child(10),
-td:nth-child(10) {
-  width: 50px; /* Change this value to your desired width */
-}
-img {
-  max-width: 100px;
-  max-height: 100px;
-}
+  #pinContainer {
+    margin-top: 20px;
+  }
 
-#content-btn{
-  background-color: #96def4;
-}
-
-button {
-  background-color: #736c6c;
-  color: #fff;
-  border: none;
-  padding: 8px 16px;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-
-
-button:hover {
-  background-color: #5f5858;
-}
-
-/* New styles for the file upload */
-.file-upload {
-  align-items: center;
-  justify-content: center;
-}
-
-.file-input {
-  margin-right: 8px;
-  display: none;
-}
-
-.file-upload-btn {
-  background-color: #736c6c;
-  color: #fff;
-  border: none;
-  padding: 8px 12px;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.file-upload-btn:hover {
-  background-color: #5f5858;
-}
+  #contentContainer {
+    display: none;
+  }
