--- a/Blog/styles.css
+++ b/Blog/styles.css
@@ -1,23 +1,23 @@
 /* styles.css */
 
 body {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; /* Changed font */
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   background-color: #f4f4f4;
   margin: 0;
   padding: 0;
   display: flex;
   flex-direction: column;
-  align-items: center; /* Center content horizontally */
+  align-items: center;
   justify-content: center;
-  min-height: 100vh; /* Ensure minimum height */
+  min-height: 100vh;
 }
 #header {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  width: 100%; /* Set the width to 100% or any other value you prefer */
-  background-color: #333; /* Optional: Set a background color */
-  color: #fff; /* Optional: Set text color */
-  padding: 20px; /* Optional: Add padding for better visual appearance */
-  text-align: center; /* Optional: Center the text within the header */
+  width: 100%;
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
 }
 
 #tableContainer {
@@ -34,7 +34,7 @@ table {
   border-collapse: collapse;
   border-radius: 8px;
   overflow: hidden;
-  border: 2px solid #3498db; /* Updated border style */
+  border: 2px solid #3498db;
 }
 
 th,
@@ -56,11 +56,11 @@ tr:nth-child(even) {
 }
 th:nth-child(6),
 td:nth-child(6) {
-  width: 600px; /* Change this value to your desired width */
+  width: 600px;
 }
 th:nth-child(10),
 td:nth-child(10) {
-  width: 50px; /* Change this value to your desired width */
+  width: 50px;
 }
 img {
   max-width: 100px;
@@ -84,7 +84,6 @@ button:hover {
   background-color: #5f5858;
 }
 
-/* New styles for the file upload */
 .file-upload {
   align-items: center;
   justify-content: center;
@@ -109,13 +108,13 @@ button:hover {
 }
 
 .sort-btn {
-  width: 20px; /* Adjust the width as needed */
-  height: 20px; /* Adjust the height as needed */
+  width: 20px;
+  height: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
-  padding: 5px; /* Adjust the padding as needed */
+  padding: 5px;
   margin: 0 auto;
   background-color: #555;
 }
